feat: new header

--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -1,10 +1,10 @@
-$bg-primary: #FFFFFF
-$bg-secondary: #EEEEEE
-$bg-btn: #EF8F36
-$text-secondary: #6466EB
-$text-primary: grey
+@import "./styles/variables"
 
+html
+    margin-left: 250px
+    margin-right: 250px
 
 body
     background-color: $bg-primary
+    
 
