--- a/src/app/styles/variables.sass
+++ b/src/app/styles/variables.sass
@@ -3,3 +3,9 @@ $bg-secondary: #EEEEEE
 $bg-btn: #EF8F36
 $text-secondary: #6466EB
 $text-primary: #383F64
+$text-info: #EEEEEE
+
+
+%margins
+    margin-left: 250px
+    margin-right: 250px
