--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -1,8 +1,9 @@
 @import "./styles/variables"
 
-html
-    margin-left: 250px
-    margin-right: 250px
+*
+    margin: 0
+    padding: 0
+    
 
 body
     background-color: $bg-primary
