feat: divider section component

--- a/src/components/Divider/divider.sass
+++ b/src/components/Divider/divider.sass
@@ -1,8 +1,11 @@
-@import "../../app/styles/variables"
+@import "../../styles/variables"
 .container-divider
     background-color: $bg-secondary
     padding: 16px 0
 
     .content-divider
         @extend %margins
+        display: flex
         align-content: center
+        justify-content: center
+        gap:8px
