feat: feature header

--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -1,5 +1,5 @@
-@import "../../app/styles/variables"
-@import "../../app/styles/buttons"
+@import "../../styles/variables"
+@import "../../styles/buttons"
     
 .header
     @extend %margins
@@ -24,6 +24,10 @@
 
             li
                 text-decoration: none
+
+                a
+                    text-decoration: none
+                    color: currentcolor
     
     
     .logo
