--- a/src/pages/Home/home.sass
+++ b/src/pages/Home/home.sass
@@ -1,5 +1,5 @@
-@import "../../app/styles/variables"
-@import "../../app/styles/buttons"
+@import "../../styles/variables"
+@import "../../styles/buttons"
 
 .container-home
     width: 100vw
