--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -9,3 +9,7 @@ $text-info: #EEEEEE
 %margins
     margin-left: 250px
     margin-right: 250px
+
+%paddings
+    padding-left: 250px
+    padding-right: 250px
