--- a/src/pages/Home/home.sass
+++ b/src/pages/Home/home.sass
@@ -6,15 +6,16 @@
 
     .content-home
         @extend %paddings
+        padding-top: 200px
         background-color: $text-secondary
         display: flex
         flex-direction: row
-        justify-content: space-between
-        padding-top: 4rem
+        justify-content: center
+        align-items: flex-end
 
         .apresentation
             display: flex
-            padding-bottom: 4rem
+            padding-bottom: 8rem
 
             .describe
                 display: flex
