--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -4,6 +4,9 @@ $bg-btn: #EF8F36
 $text-secondary: #6466EB
 $text-primary: #383F64
 $text-info: #EEEEEE
+$black-color: #000000
+$purple-color: #6466EB
+$green-color: #8CE5D3
 
 
 %margins
@@ -13,3 +16,4 @@ $text-info: #EEEEEE
 %paddings
     padding-left: 250px
     padding-right: 250px
+
