--- a/src/components/Divider/divider.sass
+++ b/src/components/Divider/divider.sass
@@ -1,7 +1,7 @@
 @import "../../styles/variables"
 .container-divider
     background-color: $bg-secondary
-    padding: 16px 0
+    padding: 32px
 
     .content-divider
         @extend %margins
