--- a/src/components/Posts/styles/postmain.sass
+++ b/src/components/Posts/styles/postmain.sass
@@ -3,10 +3,11 @@
 
 .post-container
     @extend %margins
-    padding: 32px 0
+    padding: 32px
     display: flex
     flex-direction: row
-    justify-content: space-between
+    justify-content: center
+    gap: 64px
     color: $text-info
     background-color: $bg-primary
 
@@ -15,13 +16,31 @@
     padding: 32px 0
     display: flex
     flex-direction: row-reverse
-    justify-content: space-between
+    justify-content: center
+    gap: 64px
     color: $text-info
     background-color: $bg-primary
 
+.container-frame-img
+    position: relative
+    display: inline-block
 
-.image-post
-    width: 30vw
+    .image-post
+        display: block
+        position: relative
+        z-index: 2
+        border-radius: 18px
+
+        &::before
+            content: ''
+            position: absolute
+            background-color: $text-secondary
+            width: 500px
+            height: 500px
+            border-radius: 18px
+            top: 10px
+            left: 10px
+            z-index: 1
 
 .post-title
     color: $text-secondary 
