--- a/src/components/Posts/styles/postmain.sass
+++ b/src/components/Posts/styles/postmain.sass
@@ -2,17 +2,16 @@
 @import "../../../styles/buttons"
 
 .post-container
-    @extend %margins
     padding: 32px
     display: flex
     flex-direction: row
     justify-content: center
+    align-items: center
     gap: 64px
     color: $text-info
     background-color: $bg-primary
 
 .post-container-reverse
-    @extend %margins
     padding: 32px 0
     display: flex
     flex-direction: row-reverse
