--- a/src/components/Posts/styles/postmain.sass
+++ b/src/components/Posts/styles/postmain.sass
@@ -46,7 +46,7 @@
 
     &-larger
         color: $text-secondary 
-        font-size: 48px
+        font-size: 42px
         word-break: break-word
     
 
@@ -61,7 +61,26 @@
         gap:16px
 
         .describe-services
-            
+
+            .service-title
+                color: $text-secondary
+                margin: 16px 0
+
+            p
+                color: rgb(128,128,128)
+                text-align: justify
+
+            .btn
+                @include button($bg-color-btn: $bg-btn)
+                width: 150px
+    
+    .content-services-reverse
+        display: flex
+
+        .describe-services
+            display: flex
+            gap: 16px
+            flex-direction: column
 
             .service-title
                 color: $text-secondary
