styles: error message

--- a/src/styles/layouts/stylesForms.sass
+++ b/src/styles/layouts/stylesForms.sass
@@ -35,4 +35,7 @@
             width: 150px
             align-self: center
             @include button($bg-color-btn: $bg-btn, $text-color: $text-info )
+
+        .errorMessage
+            color: $red-light
                 
