--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -7,7 +7,7 @@ $text-info: #EEEEEE
 $black-color: #000000
 $purple-color: #6466EB
 $green-color: #8CE5D3
-
+$red-light: #F62D2D
 
 %margins
     margin-left: 250px
