feat: link home page

--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -43,6 +43,7 @@
     .logo
         color: $text-secondary
         transition: .3s
+        text-decoration: none
 
         &:hover
             cursor: pointer
