--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -17,3 +17,7 @@ $red-light: #F62D2D
     padding-left: 250px
     padding-right: 250px
 
+%device-viewpoint
+    width: calc( 100vw - 532px )
+    height: calc( 100vh - 52px )
+
