--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -1,4 +1,6 @@
 @import "../styles/variables"
+@import '../styles/layouts/postpage.module'
+@import '../styles/layouts/stylesForms'
 
 *
     margin: 0
