--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -52,3 +52,52 @@
             cursor: pointer
             color: $black-color
 
+    &Admin
+        z-index: 100
+        width: 100vw
+        height: 100px
+        color: $black-color
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
+        background-color: $bg-secondary
+
+        .btn
+            @include button($bg-color-btn: $text-secondary)
+
+
+        .nav
+            padding-right: 250px
+            ul
+                
+                display: flex
+                flex-direction: row
+                gap: 32px
+                padding: 16px
+                list-style-type: none
+                color: $text-primary
+
+                li
+                    text-decoration: none
+                    display: flex
+                    flex-direction: column
+
+                    a
+                        text-decoration: none
+                        color: currentcolor
+                        transition: .3s
+
+                        &:hover
+                            color: $purple-color
+                            transform: translateY(-5px)
+                            
+        .logo
+            padding-left: 250px
+            color: $text-secondary
+            transition: .3s
+            text-decoration: none
+
+            &:hover
+                cursor: pointer
+                color: $black-color
