feat: dropzone image file in forms for create post

--- a/src/styles/layouts/stylesManegerPage.sass
+++ b/src/styles/layouts/stylesManegerPage.sass
@@ -2,6 +2,7 @@
     
 .managerContainer
     color: $black-color
-    width: calc( 100vw - 532px )
+    width: 100vw
     height: calc( 100vh - 52px )
-    position: absolute
+    overflow-y: auto
+    overflow-x: hidden
