--- a/src/styles/layouts/stylesForms.sass
+++ b/src/styles/layouts/stylesForms.sass
@@ -3,12 +3,11 @@
 
 .formsContainer
     @extend %paddings
-    position: relative
     display: flex
     flex-direction: column
     color: $black-color
     width: calc( 100vw - 532px )
-    height: calc( 100vh - 52px )
+    height: calc( 100vh - 150px )
     justify-content: center
     align-content: center
     align-items: center
@@ -43,6 +42,7 @@
                 &-medium
                     min-height: 100px
                     max-height: 200px
+                    resize: vertical
             
             
         .btn
