feat: blog page

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -21,3 +21,6 @@ $red-light: #F62D2D
     width: calc( 100vw - 532px )
     height: calc( 100vh - 52px )
 
+%title-pattern
+    font-size: 42px
+    color: $purple-color
