--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -13,6 +13,9 @@
     justify-content: space-between
     align-items: center
 
+    &::-webkit-scrollbar
+        opacity: 0.7
+
     .btn
         @include button($bg-color-btn: $text-secondary)
 
