--- a/src/styles/layouts/postpage.module.sass
+++ b/src/styles/layouts/postpage.module.sass
@@ -1,2 +1,9 @@
 @import '../buttons'
 @import '../variables'
+@import '../components/postBlog'
+
+.containerBlog
+    @extend %paddings
+    padding-top: 100px
+    margin-bottom: 1rem
+    height: 100vh
