feat: blog page with all posts

--- a/src/styles/components/postBlog.sass
+++ b/src/styles/components/postBlog.sass
@@ -12,6 +12,10 @@
 
     .titlePost
         @extend %title-pattern
+    
+    .postResume
+        text-align: center
+        font-weight: 600
 
     .postParagraph
         display: flex
@@ -21,5 +25,9 @@
 
         p
             text-justify: justify
+    
+    .achtorInfos
+        align-self: flex-start
+        text-align: start
 
     
