--- a/src/styles/layouts/postpage.module.sass
+++ b/src/styles/layouts/postpage.module.sass
@@ -1,9 +1,13 @@
 @import '../buttons'
 @import '../variables'
 @import '../components/postBlog'
+@import '../components/cardPost'
 
 .containerBlog
+    display: flex
     @extend %paddings
-    padding-top: 100px
     margin-bottom: 1rem
-    height: 100vh
+    height: calc( 100vh - 52px )
+    justify-content: center
+    justify-items: center
+    align-items: center
