--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -11,9 +11,15 @@ li
     
     ul
         text-decoration: none
+a
+    text-decoration: none
+    color: currentcolor
     
 
 body
     background-color: $bg-primary
+
+   
+
     
 
