--- a/src/styles/components/cardPost.sass
+++ b/src/styles/components/cardPost.sass
@@ -5,20 +5,24 @@
     display: flex
     flex-direction: row
     justify-content: space-between
-    width: 600px
+    width: 500px
     height: 150px
     border-radius: 5px
     padding: 1.5rem
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2)
 
     .cardInfos
+        width: 40%
         display: flex
         flex-direction: column
+        align-content: flex-start
+        justify-content: flex-start
         gap: 1rem
 
         .cardTitle
-            font-weight: 700
-            text-align: center
+            font-size: 1rem
+            font-weight: 600
+            text-align: start
 
         .cardDate
             text-align: justify
