--- a/src/styles/layouts/postpage.module.sass
+++ b/src/styles/layouts/postpage.module.sass
@@ -5,9 +5,11 @@
 
 .containerBlog
     display: flex
+    flex-direction: column
+    gap: 2rem
     @extend %paddings
+    padding-top: 10rem
     margin-bottom: 1rem
     height: calc( 100vh - 52px )
-    justify-content: center
     justify-items: center
     align-items: center
