feat: suspense loading images and paginations posts

--- a/src/styles/layouts/postpage.module.sass
+++ b/src/styles/layouts/postpage.module.sass
@@ -13,3 +13,8 @@
     height: calc( 100vh - 52px )
     justify-items: center
     align-items: center
+
+.containerBlogPage
+    display: flex
+    flex-direction: column
+    gap: 2rem
