--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -7,11 +7,12 @@
     height: 100px
     position: fixed
     color: $black-color
-    background-color: $bg-primary
+    background-color: $bg-secondary
     display: flex
     flex-direction: row
     justify-content: space-between
     align-items: center
+    transition: background-color 0.3s ease
 
     &::-webkit-scrollbar
         opacity: 0.7
