--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -24,3 +24,7 @@ $red-light: #F62D2D
 %title-pattern
     font-size: 42px
     color: $purple-color
+
+%title-error
+    font-size: 42px
+    color: $red-light
