--- a/src/styles/components/cardPost.sass
+++ b/src/styles/components/cardPost.sass
@@ -26,3 +26,29 @@
 
         .cardDate
             text-align: justify
+
+    .cardPostImage:
+        border-radius: 5px
+    
+    .fakeImage
+        width: 150px
+        height: 150px
+        background-color: #ccc /* Cor de fundo cinza */
+        border-radius: 8px /* Borda arredondada opcional */
+
+    .fakeParagraphs
+        width: 80% /* Largura da linha */
+        height: 2rem /* Altura da linha */
+        background-color: #e0e0e0 /* Cor inicial */
+        border-radius: 4px
+        animation: blink 1.5s infinite ease-in-out
+        margin-top: 1rem /* Espaçamento opcional */
+
+    /* Animação de piscar */
+    @keyframes blink
+        0%
+            background-color: #e0e0e0
+        50%
+            background-color: #c0c0c0 /* Cor intermediária mais escura */
+        100% 
+            background-color: #e0e0e0
