--- a/src/styles/layouts/postpage.module.sass
+++ b/src/styles/layouts/postpage.module.sass
@@ -36,11 +36,18 @@
     display: flex
     flex-direction: column
     gap: 2rem
-    align-content: center
-    justify-content: center
+    padding-top: 32px
+    gap´: 2rem
     align-items: center
     width: 100vw
     height: 100vh
+
+    .cardLoading
+        width: 400px
+        height: 150px
+        background-color: #ccc /* Cor de fundo cinza */
+        border-radius: 8px /* Borda arredondada opcional */
+        animation: blink 1.5s infinite ease-in-out
 
     .title
         @extend %title-error
@@ -56,6 +63,7 @@
         height: 300px
         background-color: #ccc /* Cor de fundo cinza */
         border-radius: 8px /* Borda arredondada opcional */
+        animation: blink 1.5s infinite ease-in-out
 
     .fakeParagraphs
         width: 80% /* Largura da linha */
