refactor: styles manager

--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -1,6 +1,7 @@
 @import "../styles/variables"
 @import '../styles/layouts/postpage.module'
 @import '../styles/layouts/stylesForms'
+@import '../styles/mais'
 
 *
     margin: 0
