--- a/src/styles/components/divider.sass
+++ b/src/styles/components/divider.sass
@@ -1,4 +1,5 @@
-@import "../../styles/variables"
+@import '../variables'
+
 .container-divider
     background-color: $bg-secondary
     padding: 32px
