--- a/src/styles/layouts/home.module.sass
+++ b/src/styles/layouts/home.module.sass
@@ -1,5 +1,5 @@
-@import "../../styles/variables"
-@import "../../styles/buttons"
+@import '../buttons'
+@import '../variables'
 
 .container-home
     background-color: $bg-primary
